--- a/package.json
+++ b/package.json
@@ -45,11 +45,11 @@
     "firebase": "^11.9.1",
     "genkit": "^1.20.0",
     "lucide-react": "^0.475.0",
-    "next": "15.3.3",
+    "next": "latest",
     "patch-package": "^8.0.0",
-    "react": "^18.3.1",
+    "react": "latest",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "latest",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
@@ -63,6 +63,7 @@
     "genkit-cli": "^1.20.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "eslint-config-next": "latest"
   }
 }
